--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,18 @@
   background-color: #61dafb;
 }
 
-.list {
+li {
   list-style: none;
+}
+
+.list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.completed {
+  text-decoration: line-through;
+  opacity: 0.5;
 }
